# fixed-income-toolkit

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
docs/: fixed-income-toolkit.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  bond.py  curve.py  day_count.py  nss.py  portfolio.py  risk.py  scenario.py
src/viz/: __init__.py  app.py
tests/: test_bond.py  test_curve.py  test_day_count.py  test_nss.py  test_risk.py
